--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Turing)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Turing main.cpp CPP/Transition.cpp CPP/Tape.cpp CPP/TuringMachine.cpp)
+add_executable(Turing main.cpp CPP/Transition.cpp CPP/Tape.cpp CPP/TuringMachine.cpp doctest.h Tests/TapeTest.cpp Tests/TuringMachineTest.cpp HPP/FileOpener.hpp)
